build/log/idf_py_stdout_output_41581
Command: ninja all
[1/10] Performing build step for 'bootloader'
[1/1] cd /Users/anastet/VSCodeProjects/ESPIDFTEST2/espidftest3/blink/build/bootloader/esp-idf/esptool_py && /Users/anastet/.espressif/python_env/idf5.5_py3.13_env/bin/python /Users/anastet/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /Users/anastet/VSCodeProjects/ESPIDFTEST2/espidftest3/blink/build/bootloader/bootloader.bin
Bootloader binary size 0x57e0 bytes. 0x2820 bytes (31%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/blink_example_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/blink_example_main.c.obj 
/Users/anastet/.espressif/tools/riscv32-esp-elf/esp-14.2.0_20241119/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5-dev-2715-ga45d713b03\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/anastet/VSCodeProjects/ESPIDFTEST2/espidftest3/blink/build/config -I/Users/anastet/VSCodeProjects/ESPIDFTEST2/espidftest3/blink/main -I/Users/anastet/esp/esp-idf/components/newlib/platform_include -I/Users/anastet/esp/esp-idf/components/freertos/config/include -I/Users/anastet/esp/esp-idf/components/freertos/config/include/freertos -I/Users/anastet/esp/esp-idf/components/freertos/config/riscv/include -I/Users/anastet/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/anastet/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/Users/anastet/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/Users/anastet/esp/esp-idf/components/freertos/esp_additions/include -I/Users/anastet/esp/esp-idf/components/esp_hw_support/include -I/Users/anastet/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/anastet/esp/esp-idf/components/esp_hw_support/include/soc/esp32c6 -I/Users/anastet/esp/esp-idf/components/esp_hw_support/dma/include -I/Users/anastet/esp/esp-idf/components/esp_hw_support/ldo/include -I/Users/anastet/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/Users/anastet/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/Users/anastet/esp/esp-idf/components/esp_hw_support/power_supply/include -I/Users/anastet/esp/esp-idf/components/esp_hw_support/port/esp32c6/. -I/Users/anastet/esp/esp-idf/components/esp_hw_support/port/esp32c6/include -I/Users/anastet/esp/esp-idf/components/esp_hw_support/port/esp32c6/private_include -I/Users/anastet/esp/esp-idf/components/heap/include -I/Users/anastet/esp/esp-idf/components/heap/tlsf -I/Users/anastet/esp/esp-idf/components/log/include -I/Users/anastet/esp/esp-idf/components/soc/include -I/Users/anastet/esp/esp-idf/components/soc/esp32c6 -I/Users/anastet/esp/esp-idf/components/soc/esp32c6/include -I/Users/anastet/esp/esp-idf/components/soc/esp32c6/register -I/Users/anastet/esp/esp-idf/components/hal/platform_port/include -I/Users/anastet/esp/esp-idf/components/hal/esp32c6/include -I/Users/anastet/esp/esp-idf/components/hal/include -I/Users/anastet/esp/esp-idf/components/esp_rom/include -I/Users/anastet/esp/esp-idf/components/esp_rom/esp32c6/include -I/Users/anastet/esp/esp-idf/components/esp_rom/esp32c6/include/esp32c6 -I/Users/anastet/esp/esp-idf/components/esp_rom/esp32c6 -I/Users/anastet/esp/esp-idf/components/esp_common/include -I/Users/anastet/esp/esp-idf/components/esp_system/include -I/Users/anastet/esp/esp-idf/components/esp_system/port/soc -I/Users/anastet/esp/esp-idf/components/esp_system/port/include/riscv -I/Users/anastet/esp/esp-idf/components/esp_system/port/include/private -I/Users/anastet/esp/esp-idf/components/riscv/include -I/Users/anastet/esp/esp-idf/components/lwip/include -I/Users/anastet/esp/esp-idf/components/lwip/include/apps -I/Users/anastet/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/anastet/esp/esp-idf/components/lwip/lwip/src/include -I/Users/anastet/esp/esp-idf/components/lwip/port/include -I/Users/anastet/esp/esp-idf/components/lwip/port/freertos/include -I/Users/anastet/esp/esp-idf/components/lwip/port/esp32xx/include -I/Users/anastet/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/anastet/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/anastet/esp/esp-idf/components/esp_wifi/include -I/Users/anastet/esp/esp-idf/components/esp_wifi/include/local -I/Users/anastet/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/Users/anastet/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/Users/anastet/esp/esp-idf/components/esp_event/include -I/Users/anastet/esp/esp-idf/components/esp_phy/include -I/Users/anastet/esp/esp-idf/components/esp_phy/esp32c6/include -I/Users/anastet/esp/esp-idf/components/esp_netif/include -I/Users/anastet/esp/esp-idf/components/nvs_flash/include -I/Users/anastet/esp/esp-idf/components/esp_partition/include -I/Users/anastet/VSCodeProjects/ESPIDFTEST2/espidftest3/blink/managed_components/espressif__led_strip/include -I/Users/anastet/VSCodeProjects/ESPIDFTEST2/espidftest3/blink/managed_components/espressif__led_strip/interface -I/Users/anastet/esp/esp-idf/components/esp_driver_rmt/include -I/Users/anastet/esp/esp-idf/components/esp_driver_spi/include -I/Users/anastet/esp/esp-idf/components/esp_pm/include -I/Users/anastet/esp/esp-idf/components/esp_driver_gpio/include -march=rv32imac_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/anastet/VSCodeProjects/ESPIDFTEST2/espidftest3/blink=. -fmacro-prefix-map=/Users/anastet/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/blink_example_main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/blink_example_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/blink_example_main.c.obj -c /Users/anastet/VSCodeProjects/ESPIDFTEST2/espidftest3/blink/main/blink_example_main.c
/Users/anastet/VSCodeProjects/ESPIDFTEST2/espidftest3/blink/main/blink_example_main.c: In function 'tcp_send_log':
/Users/anastet/VSCodeProjects/ESPIDFTEST2/espidftest3/blink/main/blink_example_main.c:59:48: error: implicit declaration of function 'esp_clk_cpu_freq' [-Wimplicit-function-declaration]
   59 |     float ns   = (float)cycles * 1e9f / (float)esp_clk_cpu_freq();
      |                                                ^~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
